# rest-api

./: .env  Cargo.toml
migrations/: 0001_users_table.sql  0002_posts_table.sql
src/: main.rs
src/helpers/: mod.rs  time_working.rs
src/posts/: controller.rs  mod.rs  models.rs  repository.rs  routes.rs  services.rs
src/users/: controller.rs  mod.rs  models.rs  repository.rs  routes.rs  services.rs
